# coalescing-zarr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  design.md  icechunk-virtual-chunk-fragmentation.md  mvp-advice.md  pyproject.toml
benchmarks/: build_report.py  decode_ndpi.json  decode_synthetic.json  report.html  sweep_ndpi.json  sweep_plot.py  sweep_synthetic.json
src/coalescing_zarr/: __init__.py  config.py  dataset.py  fetch.py  icechunk_native.py  icechunk_store.py  pipeline.py  region.py  store.py
src/coalescing_zarr/manifest_store/: __init__.py  fetch.py  planning.py  store.py
tests/: conftest.py  test_coalescing.py  test_planning.py
