[project]
name = "coalescing-zarr"
version = "0.1.0"
description = "Store-level range coalescing for virtual Zarr stores: a bulk get_many_chunks store method plus a decode-on-arrival codec pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # VirtualiZarr ManifestStore is the base store the Python path wraps; it also
    # pulls xarray, which open_coalesced returns.
    "virtualizarr>=2.6.2",
    "xarray",
    "zarr>=3.2.0",
    # Needs a build exposing IcechunkStore.get_many_chunks (native coalescing) —
    # not in a released icechunk yet. See README "Requirements".
    "icechunk>=2.1.0",
    "obstore>=0.10.0",
    "numpy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coalescing_zarr"]

[tool.uv]
package = true
default-groups = ["dev"]

# icechunk's native get_many_chunks is not in a released version yet, so build it
# from the fork branch — this makes a fresh `uv sync` give a working native path.
# Note this [tool.uv.sources] override applies only to this repo's own dev sync;
# it is NOT baked into the built wheel (see README "Requirements"). Swap for a
# plain version once the feature ships upstream.
[tool.uv.sources]
icechunk = { git = "https://github.com/earth-mover/icechunk", branch = "ian/more-specific-vritual", subdirectory = "icechunk-python" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "prek>=0.0.1",
    # Tests build synthetic ManifestStores and register obstores through this.
    "obspec-utils",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
